fix: simplify CORS policy to allow any origin